--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,50 +8,49 @@
     <title>ChangeLog Component</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
     <div class="changelog-container">
         <div class="changelog-header">
-            <h1>ChangeLog</h1>
+            <h1>Changelog</h1>
             <p>Here's everything we have shipped in the past few days</p>
         </div>
-   
 
         <div class="timeline">
             <div class="timeline-item">
-                <div class="timeline-date">September 3,2024</div>
+                <div class="timeline-date">September 3, 2024</div>
                 <div class="timeline-content">Announcing Projects on Frontend Roadmap</div>
             </div>
             <div class="timeline-item">
-                <div class="timeline-date">August 8,2024</div>
+                <div class="timeline-date">August 28, 2024</div>
                 <div class="timeline-content">Build your learning habits with learning streaks</div>
             </div>
             <div class="timeline-item">
-                <div class="timeline-date">August 25,2024</div>
-                <div class="timeline-content">Git and Github Roadmap</div>
+                <div class="timeline-date">August 25, 2024</div>
+                <div class="timeline-content">Git and GitHub Roadmap</div>
             </div>
             <div class="timeline-item">
-                <div class="timeline-date">August 22,2024</div>
-                <div class="timeline-content">Submit your project ideas and get feedback</div>
+                <div class="timeline-date">August 22, 2024</div>
+                <div class="timeline-content">Submit your project solution and get feedback</div>
             </div>
             <div class="timeline-item">
-                <div class="timeline-date">August 15,2024</div>
-                <div class="timeline-content">Backend project ideas</div>
+                <div class="timeline-date">August 15, 2024</div>
+                <div class="timeline-content">Backend Project Ideas</div>
             </div>
             <div class="timeline-item">
-                <div class="timeline-date">August 10,2024</div>
-                <div class="timeline-content">Redis Roadmap</div>
+                <div class="timeline-date">August 10, 2024</div>
+                <div class="timeline-content">Redis roadmap</div>
             </div>
             <div class="timeline-item">
-                <div class="timeline-date">August 1,2024</div>
+                <div class="timeline-date">August 1, 2024</div>
                 <div class="timeline-content">Changelog page to help you stay in the loop</div>
             </div>
         </div>
+
         <div class="changelog-footer">
             <button>Visit Complete Changelog</button>
         </div>
     </div>
-
-    <script src="script.js"></script>
 </body>
+
 </html>
